fix bug with content shifting form page

--- a/source/sass/blocks/select-program.scss
+++ b/source/sass/blocks/select-program.scss
@@ -74,7 +74,9 @@
   }
 
   &--no-margin-bottom {
-    margin-bottom: 0;
+    @media (min-width: $desktop-width) {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -111,6 +113,7 @@
     background-color: $basic-green;
     content: "";
     height: 2px;
+    left: 0;
     position: absolute;
     top: 14px;
     width: 100%;
@@ -188,6 +191,8 @@
   outline-offset: -2px;
   width: 100%;
   padding: 10px;
+
+  resize: none;
 
   &:hover {
     outline-color: $special-grey;
